--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -63,3 +63,12 @@ nav, footer {
 .gallery-img {
     cursor: pointer;
 }
+.jumbotron{height:400px;}
+dt{font-size:20px;}
+.glossary-def{font-size:26px;}
+
+.lg-outer .lg-thumb-outer {
+    background-color: transparent !important;}
+
+    .nav-link{font-size: 20px !important;
+        font-weight: 300 !important;}
