--- a/_includes/index/jumbotron.html
+++ b/_includes/index/jumbotron.html
@@ -5,7 +5,9 @@
     background-repeat: no-repeat;
 }
 </style>
-<div class="jumbotron feature text-white">
+<div class="jumbotron feature text-white p-0">
+    <div class="jumbo-text p-3">
     <h2 class="display-4">{{ site.title }}</h2>
     <p>{{ site.tagline }}</p>
+    </div>
 </div>
