--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -84,6 +84,6 @@ gallery: true
         </div>
     </div>
     <div class="text-center">
-        <a class="btn btn-secondary" href="{{ "/data/" | relative_url }}" role="button">&laquo; Back to item table</a>
+        <a class="btn btn-secondary" href="{{ "/browse/" | relative_url }}" role="button">&laquo; Back to browse</a>
     </div>
 </div>
