--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -72,3 +72,4 @@ dt{font-size:20px;}
 
     .nav-link{font-size: 20px !important;
         font-weight: 300 !important;}
+.jumbo-text{background:rgba(171, 167, 167, 0.4)}        
