more stuff, polish and moves based on Renae discussion
I should stop

--- a/_includes/index/carousel.html
+++ b/_includes/index/carousel.html
@@ -1,6 +1,6 @@
 <div class="card mb-3">
     <div class="card-body">
-        <h5 class="card-title">Forms</h5>
+        <h5 class="card-title">Sample Images</h5>
         <div class="row">
             <div class="col-md-12">
                 <div id="carouselExampleIndicators" class="carousel slide mb-3" data-ride="carousel">
