--- a/_includes/index/eras.html
+++ b/_includes/index/eras.html
@@ -2,10 +2,10 @@
         <div class="card-body">
           <h5 class="card-title">Eras</h5><p class="card-text">
               
-            <a class="btn btn-sm btn-ponderosa-pine m-1" href="{{ 'timeline/tokugawa-1603-1868' | relative_url }}">Tokugawa</a>
-              <a class="btn btn-sm btn-ponderosa-pine m-1" href="{{ 'timeline/early-meiji-1868-1885' | relative_url }}">Meiji</a>
-              <a class="btn btn-sm btn-ponderosa-pine m-1" href="{{ 'timeline/taisho-1912-1926' | relative_url }}">Taisho</a>
-              <a class="btn btn-sm btn-ponderosa-pine m-1" href="{{ 'timeline/showa-1926-1989' | relative_url }}">Showa</a>
+            <a class="btn btn-sm btn-ponderosa-pine m-1" href="{{ 'timeline/#tokugawa-1603-1868' | relative_url }}">Tokugawa</a>
+              <a class="btn btn-sm btn-ponderosa-pine m-1" href="{{ 'timeline/#early-meiji-1868-1885' | relative_url }}">Meiji</a>
+              <a class="btn btn-sm btn-ponderosa-pine m-1" href="{{ 'timeline/#taisho-1912-1926' | relative_url }}">Taisho</a>
+              <a class="btn btn-sm btn-ponderosa-pine m-1" href="{{ 'timeline/#showa-1926-1989' | relative_url }}">Showa</a>
             
             </p>
         </div>
