--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -7,9 +7,13 @@
     color: $text-color;
     background: $background-color;
 }*/
+body {
+    font-family: $base-font-family;
+    font-size: $base-font-size;}
 a {
     color: $link-color;
     text-decoration: none;
+    font-weight: bold;
     &:hover {
         color: $text-color;
         text-decoration: underline;
@@ -72,4 +76,5 @@ dt{font-size:20px;}
 
     .nav-link{font-size: 20px !important;
         font-weight: 300 !important;}
-.jumbo-text{background:rgba(171, 167, 167, 0.4)}        
+.jumbo-text{background:rgba(171, 167, 167, 0.4)}    
+.card-title{font-size:1.5rem}    
