--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -3,6 +3,9 @@ layout: page
 ---
 {% assign items = site.data[site.metadata] %}
 
+<h1 class="text" Search Items>
+    <p class="text">Use this page to search by different attributes, such as vessel form; decoration type, method, element or color; paste type; or vessel size. To view attribute terms by frequency, visit the <a href="({{ '/subjects/' | relative_url }})" target="_blank">Subjects page</a>.</p>
+
 <h2 class="text-center">
     <input type="text" id="quicksearch" placeholder=" Filter ... " > 
     <input class="btn btn-pride-gold align-top" title="Search" type="submit" value="Go" alt="Search" id="goButton" onclick="filterItems()"> 
@@ -24,7 +27,7 @@ layout: page
             {% assign facets = "functional-category;material;vessel-form" | split: ";" %}
             <p>
             {% for f in facets %}
-                <a class="btn btn-sm btn-secondary m-1 filter" data-filter="{{ item[f] | trim |escape }}" href="{{ item[f] | trim | uri_escape | prepend: "/browse/#" | relative_url }}">{{ item[f] }}</a> 
+                <a class="btn btn-sm btn-clearwater m-1 filter" data-filter="{{ item[f] | trim |escape }}" href="{{ item[f] | trim | uri_escape | prepend: "/browse/#" | relative_url }}">{{ item[f] }}</a> 
             {% endfor %} 
             </p>
 
