more polishing with Renae

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -8,6 +8,7 @@ layout: home-default
   </div>
   
 {% include index/jumbotron.html %}
+{% include index/collection-nav.html %}
 <div class="container">
 <div class="row">
     <div class="col-md-8">
