--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="navbar nav-light border-top">
     <div class="container py-3">
-        <a class="navbar-brand" href="{{ "/" | absolute_url }}">{{ site.title }}</a> 
+        <a href="{{ "/" | absolute_url }}">{{ site.title }}</a> 
 
         <span class="navbar-text navbar-nav">University of Idaho Library Digital Initiatives 2018</span>
     </div>
