--- a/_layouts/term.html
+++ b/_layouts/term.html
@@ -8,7 +8,7 @@ gallery: true
     <div class="container">
         <ul class="breadcrumb">
             <li class="breadcrumb-item"><a href="{{ "/" | absolute_url }}">Home</a></li>
-            <li class="breadcrumb-item"><a href="{{ "/resources/" | absolute_url }}">Resources</a></li>
+            <li class="breadcrumb-item"><a href="{{ "/glossary/" | absolute_url }}">Glossary</a></li>
             <li class="breadcrumb-item active">{{ page.term }}</li>
         </ul>
     
@@ -40,7 +40,7 @@ gallery: true
 
         </div>
         <div class="text-center">
-            <a class="btn btn-secondary" href="{{ "/resources/" | relative_url }}" role="button">&laquo; Glossary</a>
+            <a class="btn btn-secondary" href="{{ "/glossary/" | relative_url }}" role="button">&laquo; Glossary</a>
         </div>
     </div>
 
