--- a/_includes/js/carousel-js.html
+++ b/_includes/js/carousel-js.html
@@ -1,8 +1,8 @@
 {%- assign carousel-items = site.data.hjccc-images -%}
 
 <script>
-     var objectids = [{% for item in carousel-items %}{% if forloop.last %}"{{item.object-id}}"{%else%}"{{item.object-id}}",{% endif %}{% endfor %}];
-     var imageids = [{% for item in carousel-items %}{% if forloop.last %}"{{item.identifier}}"{%else%}"{{item.identifier}}",{% endif %}{% endfor %}];
+    var objectids = [{% for item in carousel-items %}"{{item.object-id}}"{% unless forloop.last %}, {% endunless %}{% endfor %}];
+    var imageids = [{% for item in carousel-items %}"{{item.identifier}}"{% unless forloop.last %}, {% endunless %}{% endfor %}];
     {% for i in (1..9) %}var image{{ i }} = document.getElementById("car-image{{ i }}");
     var itemlink{{ i }} = document.getElementById("itemlink{{ i }}");   
     {% endfor %}
@@ -19,10 +19,10 @@
     }
     shuffle(objectids);
     shuffle(imageids);
-    console.log(imageids);
+    //console.log(imageids);
     {% for i in (1..9) %}
-itemlink{{ i }}.href = '{{ "/data/" | relative_url }}' +objectids[{{ i }}]+'.html';
-image{{ i }}.src = 'https://www.lib.uidaho.edu/digital/hjccc/objects/'+imageids[{{ i }}]+'_sm.jpg';
+    itemlink{{ i }}.href = '{{ "/data/" | relative_url }}' + objectids[{{ i }}] + '.html';
+    image{{ i }}.src = 'https://www.lib.uidaho.edu/digital/hjccc/objects/'+ imageids[{{ i }}] + '_sm.jpg';
     {% endfor %}
    
 </script>
