changed featured image to jumbotron image in config

--- a/_includes/index/jumbotron.html
+++ b/_includes/index/jumbotron.html
@@ -1,6 +1,6 @@
 <style>
 .feature {
-    background-image: url('{{ page.featured-image | relative_url }}');
+    background-image: url('{{ site.jumbotron-image | relative_url }}');
     background-size: cover;
     background-repeat: no-repeat;
 }
