--- a/_includes/aboutsidebar.html
+++ b/_includes/aboutsidebar.html
@@ -10,7 +10,7 @@
     <div class="card mt-4">
         <div class="card-header background-grey">More About the Collections</div>
         <div class="card-body">
-            <p class="card-text">Many of the artifacts on this site are from the <strong>Asian American Comparative Collection (AACC)</strong>. More examples of artifacts held in this collection can be seen at the <a href="http://webpages.uidaho.edu/aacc/illus.htm" target="_blank">AACC Artifact Illustrations site</a>.</p>
+            <p class="card-text">Many of the artifacts on this site are from the <strong>Asian American Comparative Collection (AACC)</strong>. More examples of artifacts held in this collection can be seen at the <a href="http://webpages.uidaho.edu/aacc/illus.htm" target="_blank">AACC Artifact Illustrations page</a>.</p>
             <p class="card-text"><strong>Japanese Gulch Village</strong> artifacts are part of the <a href="http://www.burkemuseum.org/research-and-collections/culture" target="_blank">Culture Collections</a> at the Burke Museum of Natural History and Culture. Learn more about the fascinating collections in recent articles <a href="http://www.burkemuseum.org/blog/soles-japanese-gulch" target="_blank">"The soles of the Japanese Gulch"</a> and <a href="http://www.burkemuseum.org/blog/connecting-japanese-gulch-artifacts" target="_blank">"Connecting with Japanese Gulch Artifacts"</a>.</p>
         </div>
     </div>
