Download Data button

--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -3,7 +3,7 @@ layout: page
 ---
 <link rel="stylesheet" type="text/css" href="{{ "/assets/datatables/datatables.min.css" | relative_url }}">
 
-<button type="button" class="btn btn-clearwater float-md-right" data-toggle="modal" data-target="#data">Download Data</button>
+<button type="button" class="btn btn-secondary float-md-right" data-toggle="modal" data-target="#data">Download Data</button>
 <!-- Modal -->
 <div class="modal fade" id="data" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
