changes for pub

--- a/_includes/all-collections-nav.html
+++ b/_includes/all-collections-nav.html
@@ -31,7 +31,7 @@
 </div>
 
 <h4>Collections A-Z</h4>
-<ul>
+<ul class="collection-list">
 <li><a href="https://www.lib.uidaho.edu/digital/uiext/"><strong> Agricultural</strong> Experiment &amp; UI Extension Publications</a></li>
 <li><a href="https://www.lib.uidaho.edu/digital/argonaut/index.html">The<strong> Argonaut</strong></a></li>
 <li><a href="https://www.lib.uidaho.edu/digital/barstock/"> <strong>Barnard-Stockbridge</strong> Photograph Collection</a></li>
