--- a/_includes/tree.html
+++ b/_includes/tree.html
@@ -71,7 +71,7 @@
                   "Form": "Chawan",
                   "name": "Chawan - (indeterminate bowl)",
                   "Description": "Used when a more specific chawan form cannot be determined.",
-                  "url": "{{ '/browse/#indeterminate bowl' | relative_url }}"
+                  "url": "{{ '/browse.html#indeterminate bowl' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
@@ -167,7 +167,7 @@
                   "Form": "",
                   "name": "Indeterminate Teapot",
                   "Description": "A teapot for which a type/function could not be determined.",
-                  "url": "{{ '/browse/#Indeterminate Teapot' | relative_url }}"
+                  "url": "{{ '/browse.html#Indeterminate Teapot' | relative_url }}"
                 }
               ]
             }
