--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -37,7 +37,7 @@ $light-text-color: #fdfdfd;
 
 $background-color: #fdfdfd;
 $nav-background: #e8e8e8; //#CBCCD0;
-$link-color:      $clearwater;
+$link-color:      $black-color;
 
 $jumbotron-image: url('{{site.jumbotron-image | relative_url}}');
 
