--- a/_includes/index/forms.html
+++ b/_includes/index/forms.html
@@ -3,7 +3,7 @@
     <h5 class="card-title">Forms</h5>
     <div class="row">
       <div class="col-md-12">
-        <p class="card-text text-center"><a href="{{ "/forms/" | relative_url }}" title="collection forms"><img class="img-fluid rounded" src="{{ "/objects/forms.png" | relative_url }}" alt="Forms visualization"></a></p>
+        <p class="card-text text-center"><a href="{{ "/forms.html" | relative_url }}" title="collection forms"><img class="img-fluid rounded" src="{{ "/objects/forms.png" | relative_url }}" alt="Forms visualization"></a></p>
       </div>
       
     </div>
