--- a/_includes/index/sources.html
+++ b/_includes/index/sources.html
@@ -4,9 +4,9 @@
     <p class="card-text">
       <ul class="list-unstyled">
         <li>Asian American Comparative Collection:
-          <a href="{{ 'asian american comparative collection' | uri_escape | prepend: '/browse/#' | absolute_url }}">23 objects</a>.</li>
+          <a href="{{ 'asian american comparative collection' | uri_escape | prepend: '/browse.html#' | absolute_url }}">23 objects</a>.</li>
         <li>Burke Museum of Natural History and Culture, US Air Force Collection:
-          <a href="{{ 'burke museum of natural history' | uri_escape | prepend: '/browse/#' | absolute_url }}">27 objects</a>.</li>
+          <a href="{{ 'burke museum of natural history' | uri_escape | prepend: '/browse.html#' | absolute_url }}">27 objects</a>.</li>
       </ul>
     </p>
   </div>
