--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -104,3 +104,20 @@ dt {
         font-weight: normal;
     }
 }
+#collectionslink {
+    cursor: pointer;
+    z-index: 999;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    color: white;
+    font-size: 14px;
+    background: #999;
+    border-radius: 0px 0px 0px 20px;
+    padding: 5px 20px;
+    border-bottom: 1px #dadada solid;
+    margin: 0;
+    font-weight: 300; }
+  
+  #collectionslink p {
+    margin: 0; }
