--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,9 +1,10 @@
 <!-- Optional JS for Bootstrap: jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="{{ "/assets/js/jquery-3.3.1.min.js" | relative_url }}"></script>
-<script src="{{ "/assets/js/bootstrap.bundle.min.js" | relative_url }}"></script>
+<script src="{{ '/assets/js/jquery-3.3.1.min.js' | relative_url }}"></script>
+<script src="{{ '/assets/js/bootstrap.bundle.min.js' | relative_url }}"></script>
 <!-- load other js -->
 {% if page.layout == "browse" %}{% include js/browse-js.html %}{% endif %}
 {% if page.layout == "data" %}{% include js/table-js.html %}{% endif %}
 {% if page.layout == "subjects" %}{% include js/subjects-js.html %}{% endif %}
 {% if page.layout == "timeline" %}{% include js/timeline-js.html %}{% endif %}
 {% if layout.gallery == true %}{% include js/gallery-js.html %}{% endif %}
+{% if page.layout == "home-infographic" %}{% include js/carousel-js.html %}{% endif %}
