--- a/_includes/index/carousel.html
+++ b/_includes/index/carousel.html
@@ -2,30 +2,21 @@
     <div class="card-body">
         <h5 class="card-title">Sample Images</h5>
         <div class="row">
-            <div class="col-md-12">
-                <div id="carouselExampleIndicators" class="carousel slide mb-3" data-ride="carousel">
+            <div class="col-md-12 pb-3">
+                <div id="carouselControls" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         {% for i in (1..9) %}
-                        <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.index }}" class="{% if forloop.first %}active{% endif %}"></li>
+                        <li data-target="#carouselControls" data-slide-to="{{ forloop.index }}" class="{% if forloop.first %}active{% endif %}"></li>
                         {% endfor %}
                     </ol>
-                    <div class="carousel-inner">
-                        {% for i in (1..9) %}
-                        <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                            <img id="car-image{{ forloop.index }}" src="" style="width:100%" alt="Image Highlight">
-                            <div class="carousel-caption ">
-                                <h5>
-                                    <a target="_blank" id="itemlink{{ forloop.index }}" href="" class="btn btn-pride-gold">Go to Item</a>
-                                </h5>
-                            </div>
-                        </div>
-                        {% endfor %}
+                    <div id="carouselInner" class="carousel-inner">
+                        
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
@@ -34,4 +25,3 @@
         </div>
     </div>
 </div>
-{% include js/carousel-js.html %}
