--- a/_includes/js/carousel-js.html
+++ b/_includes/js/carousel-js.html
@@ -1,28 +1,12 @@
 {%- assign carousel-items = site.data.hjccc-images -%}
-
-<script>
-    var objectids = [{% for item in carousel-items %}"{{item.object-id}}"{% unless forloop.last %}, {% endunless %}{% endfor %}];
-    var imageids = [{% for item in carousel-items %}"{{item.identifier}}"{% unless forloop.last %}, {% endunless %}{% endfor %}];
-    {% for i in (1..9) %}var image{{ i }} = document.getElementById("car-image{{ i }}");
-    var itemlink{{ i }} = document.getElementById("itemlink{{ i }}");   
-    {% endfor %}
-    /* Fisher-Yates shuffle https://bost.ocks.org/mike/shuffle/ */
-    function shuffle(array) {
-        var m = array.length, t, i;
-        while (m) {
-        i = Math.floor(Math.random() * m--);
-        t = array[m];
-        array[m] = array[i];
-        array[i] = t;
-        }
-        return array;
+<script> 
+    var carouselItems = [ {% for c in carousel-items %}{ "object": "{{ c.object-id }}", "id": "{{ c.identifier }}" }{% unless forloop.last %}, {% endunless %}{% endfor %}];
+    var carousel = document.getElementById("carouselInner");
+    carouselItems.sort(function() { return 0.5 - Math.random() });
+    var i;
+    for (i=0; i < 9; i++) {
+        slide = "<div class='carousel-item'><img class='w-100' alt='image highlight' src='https://www.lib.uidaho.edu/digital/hjccc/objects/" + carouselItems[i].id + "_sm.jpg'> <div class='carousel-caption'> <h5> <a target='_blank' href='{{ site.baseurl }}/data/" + carouselItems[i].object + ".html' class='btn btn-pride-gold'>Go to Item</a></h5> </div> </div>";
+        carousel.innerHTML += slide;
     }
-    shuffle(objectids);
-    shuffle(imageids);
-    //console.log(imageids);
-    {% for i in (1..9) %}
-    itemlink{{ i }}.href = '{{ "/data/" | relative_url }}' + objectids[{{ i }}] + '.html';
-    image{{ i }}.src = 'https://www.lib.uidaho.edu/digital/hjccc/objects/'+ imageids[{{ i }}] + '_sm.jpg';
-    {% endfor %}
-   
+    $(".carousel-item").first().addClass("active");
 </script>
