--- a/_includes/data-download.html
+++ b/_includes/data-download.html
@@ -10,11 +10,10 @@
                 </button>
             </div>
             <div class="modal-body text-center">
-                <a class="btn btn-primary col-md-6 col-md-offset-3" href="{{ "/data/metadata.csv" | absolute_url }}" target="_blank">CSV spreadsheet</a>
+                <a class="btn btn-primary col-md-6 col-md-offset-3" href="{{ '/data/metadata.csv' | absolute_url }}" target="_blank">CSV spreadsheet</a>
                 <br>
-                <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ "/data/metadata.json" | absolute_url }}" target="_blank">JSON</a>
-                <!--<br>
-                <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ "/data/subjects.json" | absolute_url }}" target="_blank">Subjects JSON</a>-->
+                <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ '/data/metadata.json' | absolute_url }}" target="_blank">JSON</a>
+                <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ '/data/' | relative_url }}" >More options</a>
             </div>
         </div>
     </div>
