--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,6 @@
     <div class="container py-3">
         <a href="{{ "/" | absolute_url }}">{{ site.title }}</a> 
 
-        <span class="navbar-text navbar-nav">University of Idaho Library Digital Initiatives 2018</span>
+        <span class="navbar-text navbar-nav"><a href="https://www.lib.uidaho.edu/digital/">University of Idaho Library Digital Initiatives</a> 2018</span>
     </div>
 </footer>
