glossary style tweak

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -119,5 +119,11 @@ dt {
     margin: 0;
     font-weight: 300; }
   
-  #collectionslink p {
+#collectionslink p {
     margin: 0; }
+/* glossary */
+#glossary-list {
+    a {
+        text-decoration: underline;
+    }
+}
