Added University of Idaho after AACC

--- a/_includes/aboutsidebar.html
+++ b/_includes/aboutsidebar.html
@@ -22,7 +22,7 @@
     <div class="card-header background-grey">More About the Collections</div>
     <div class="card-body">
         <p class="card-text">Many of the artifacts on this site are from the
-            <strong>Asian American Comparative Collection (AACC)</strong>. More examples of artifacts held in this collection
+            <strong>Asian American Comparative Collection </strong> (AACC) at the Univeristy of Idaho. More examples of artifacts held in this collection
             can be seen at the
             <a href="http://webpages.uidaho.edu/aacc/illus.htm" target="_blank">AACC Artifact Illustrations page</a>.</p>
         <p class="card-text">
