Hoping that I added Teipotto to tree!

--- a/_includes/tree.html
+++ b/_includes/tree.html
@@ -165,6 +165,14 @@
                   "Category": "Tableware",
                   "Type": "Teapots",
                   "Form": "",
+                  "name": "Teipotto (Western-style teapot)",
+                  "Description": "Teipotto are Western-style teapots with ceramic handles attached to the teapot side-body opposite a spout (Nakajima 1999:81).",
+                  "url": "{{ '/glossary/teipotto-western-style-teapot.html' | relative_url }}"
+                },
+                {
+                  "Category": "Tableware",
+                  "Type": "Teapots",
+                  "Form": "",
                   "name": "Indeterminate Teapot",
                   "Description": "A teapot for which a type/function could not be determined.",
                   "url": "{{ '/browse.html#Indeterminate Teapot' | relative_url }}"
