--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 ---
-<link rel="stylesheet" type="text/css" href="{{ "/assets/datatables/datatables.min.css" | relative_url }}">
+<link rel="stylesheet" type="text/css" href="{{ '/assets/datatables/datatables.min.css' | relative_url }}">
 
 <button type="button" class="btn btn-secondary float-md-right" data-toggle="modal" data-target="#data">Download Data</button>
 <!-- Modal -->
@@ -15,9 +15,9 @@ layout: page
                 </button>
             </div>
             <div class="modal-body text-center">
-                <a class="btn btn-primary col-md-6 col-md-offset-3" href="{{ "/data/metadata.csv" | absolute_url }}" target="_blank">CSV spreadsheet</a>
+                <a class="btn btn-primary col-md-6 col-md-offset-3" href="{{ '/data/metadata.csv' | absolute_url }}" target="_blank">CSV spreadsheet</a>
                 <br>
-                <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ "/data/metadata.json" | absolute_url }}" target="_blank">JSON</a>
+                <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ '/data/metadata.json' | absolute_url }}" target="_blank">JSON</a>
                 <!--<br>
                 <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ "/data/subjects.json" | absolute_url }}" target="_blank">Subjects JSON</a>-->
             </div>
