--- a/_layouts/table.html
+++ b/_layouts/table.html
@@ -1,6 +1,6 @@
 ---
 layout: page
 ---
-<link rel="stylesheet" type="text/css" href="{{ "/assets/datatables/datatables.min.css" | relative_url }}">
+<link rel="stylesheet" type="text/css" href="{{ '/assets/datatables/datatables.min.css' | relative_url }}">
 
 {{ content }}
