clean up analytics include

--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -12,5 +12,5 @@
       'domains': ['www.lib.uidaho.edu', 'www.ijc.uidaho.edu', 'vivo.nkn.uidaho.edu', 'inside.uidaho.edu', 'libguides.uidaho.edu', 'digital.lib.uidaho.edu', 'poetry.lib.uidaho.edu', 'journals.lib.uidaho.edu']
     }
   });
-</script>-->
+</script>
 {% endif %}
