--- a/_layouts/term.html
+++ b/_layouts/term.html
@@ -3,6 +3,7 @@ layout: default
 gallery: true
 ---
 {% assign objects = site.data.hjccc-objects %}
+
 <div class="container py-3">
 
     <div class="container">
@@ -16,7 +17,8 @@ gallery: true
             <div class="col-md-6" >
                 <h2>{{ page.term }}</h2>
                 <p>{{ page.definition }}</p>
-                <p><a class="btn btn-clearwater btn-lg" href="{{ '/browse.html#' | append: page.search | relative_url }}">Browse Items</a></p>
+                <p><a class="btn btn-clearwater btn-lg" id="gallery-open">View Gallery of Items</a></p>
+                <p><a class="btn btn-secondary btn-lg" href="{{ '/browse.html#' | append: page.search | relative_url }}">Browse Item Records</a></p>
             </div>
             
             {% for item in objects %}
