changes with Evan (so brutal working with him)

--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -25,12 +25,11 @@ gallery: true
                 </div>
                 <div class="text-center my-2">
                     <p>{{ image.title }}</p>
-                    <a href="https://www.lib.uidaho.edu/digital/hjccc/objects/{{ image.identifier }}.jpg" target="_blank" class="btn btn-clearwater" title="image download">Download Image</a>
+                    <a href="https://www.lib.uidaho.edu/digital/hjccc/objects/{{ image.identifier }}.jpg" target="_blank" class="btn btn-outline-clearwater" title="image download">Download Image</a>
                 </div>
             </div>
             {% endfor %}
         </div>
-
         <div class="col-md-6">
             <div id="item-metadata" class="metadata">
                 <dl>
