--- a/_layouts/term.html
+++ b/_layouts/term.html
@@ -33,7 +33,7 @@ gallery: true
                     </div>
                     <div class="text-center my-2">
                         <p class="d-none d-md-block">{{ image.title }}</p>
-                        <a href="{{ '/data/' | absolute_url | append: image.object-id | append: '.html' }}" class="btn btn-clearwater" title="image download">View Item</a>
+                        <a href="{{ '/data/' | absolute_url | append: image.object-id | append: '.html' }}" class="btn btn-outline-clearwater" title="image download">Item Record</a>
                     </div>
                 </div>
             </div>
