--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -131,7 +131,7 @@ border-color: $palouse-green;
 }
 
 .btn-clearwater{
-    color: #fff;
+    color: #fff !important;
     background-color: $clearwater;
     border-color: $clearwater;
     &:hover{
