--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -1,4 +1,4 @@
-<script src="{{ "/assets/js/jquery.lazyload.js" | relative_url }}"></script>
+<script src="{{ '/assets/js/jquery.lazyload.js' | relative_url }}"></script>
 <script>
   var $imgs = $("img.lazy");
   // Lazy Load images when they appear in DOM
