--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -4,7 +4,7 @@ layout: page
 {% assign items = site.data[site.metadata] %}
 
 <h1 class="text"> Search Items</h1>
-    <p class="text">Use this page to search by different attributes, such as vessel form; decoration type, method, element or color; paste type; or vessel size. To view attribute terms by frequency, visit the <a href="{{ '/subjects.html' | relative_url }}" target="_blank">Subjects page</a>.</p>
+    <p class="text">Use this page to search by different attributes, such as vessel form; decoration type, method, element or color; paste type; or vessel size. To view attribute terms by frequency, visit the <a href="{{ '/subjects.html' | relative_url }}" >Subjects page</a>.</p>
 
 <h2 class="text-center">
     <input type="text" id="quicksearch" placeholder=" Filter ... " > 
@@ -18,7 +18,7 @@ layout: page
     {% for item in items %}
     <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-2">
     <div class="card" >
-        <a href="{{ '/data/' | absolute_url | append: item.object-id | append: ".html" }}">
+        <a href="{{ '/data/' | absolute_url | append: item.object-id | append: '.html' }}">
             {% assign images = site.data.hjccc-images | where: "object-id", item.object-id | first %}
             <img class="card-img-top lazy" {% if forloop.index < 20 %}src{% else %}data-original{% endif %}="https://www.lib.uidaho.edu/digital/hjccc/objects/{{ images.identifier }}_th.jpg" alt="{{ item.title | escape }}">
         </a>
@@ -30,17 +30,14 @@ layout: page
                 <a class="btn btn-sm btn-clearwater m-1 filter" data-filter="{{ item[f] | trim |escape }}" href="{{ item[f] | trim | uri_escape | prepend: '/browse.html#' | relative_url }}">{{ item[f] }}</a> 
             {% endfor %} 
             </p>
-
-            <!--<p class="card-text"><strong>Material: </strong>{{ item.material}}</p>
-            <p class="card-text"><strong>Vessel Form: </strong>{{ item.vessel-form}}</p>-->
-            <p class="card-text"><strong>Decoration Type: </strong>{{ item.decoration-type}}</p>
+            <p class="card-text"><strong>Decoration Type: </strong>{{ item.decoration-type }}</p>
             <p class="card-text"><strong>Description: </strong>{{ item.description | truncatewords: 20 }}</p>
-            <p class="card-text"><strong>Source: </strong>{{ item.source}}</p>
-            <p class="card-text"><strong>Catalog Number: </strong>{{ item.catalog-number}}</p>
+            <p class="card-text"><strong>Source: </strong>{{ item.source }}</p>
+            <p class="card-text"><strong>Catalog Number: </strong>{{ item.catalog-number }}</p>
+            <p class="d-none card-text">{{ item.subjects }}</p>
             <p class="d-none card-text">{{ item.artifact-dimensions}}</p>
             <p class="d-none card-text">{{ item.site-location}}</p>
             <p class="d-none card-text">{{ item.site-date}}</p>
-            <p class="d-none card-text">{{ item.functional-category}}</p>
             <p class="d-none card-text">{{ item.pigment-application}}</p>
             <p class="d-none card-text">{{ item.exterior-decoration-method}}</p>
             <p class="d-none card-text">{{ item.exterior-decoration-color}}</p>
