set tree link to open _self, not new window

--- a/_includes/tree.html
+++ b/_includes/tree.html
@@ -302,7 +302,7 @@
     nodeEnter.append("svg:text")
       .attr("x", function (d) { return d.children || d._children ? -10 : 10; })
       .attr("class", function (d) { return d.children || d._children ? "" : "url-link"; })
-      .attr("onclick", function (d) { return d.children || d._children ? "" : "window.open('" + d.url + "')"; })
+      .attr("onclick", function (d) { return d.children || d._children ? "" : "window.open('" + d.url + "','_self')"; })
       .attr("dy", ".35em")
       .attr("text-anchor", function (d) { return d.children || d._children ? "end" : "start"; })
       .text(function (d) { return d.name; })
