updates to about and item pages

--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -64,6 +64,8 @@ gallery: true
                     <dl>
                         <dt>Preferred Image Citation:</dt> 
                         <dd>{{ page.preferred-image-citation }}</dd>
+                        <dt>Metadata Created By:</dt>
+                        <dd>Renae Campbell (2018)</dd>
                         <dt>Reference Link:</dt>
                         <dd>{{ page.url | absolute_url }}</dd>
                     </dl>
