--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -3,8 +3,8 @@ layout: home-default
 ---
 {%- assign items = site.data[site.metadata] -%}
 {% include index/jumbotron.html %}
-{% include index/collection-nav.html %}
-<div class="container">
+{% include collection-nav.html %}
+<div class="container mt-3">
   <div class="row">
     <div class="col-md-8">
 
