--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -8,7 +8,8 @@ layout: home-default
   <div class="row">
     <div class="col-md-8">
 
-      {% include index/description.html %} {% include index/carousel.html %}
+      {% include index/description.html %}
+      {% include index/carousel.html %}
 
     </div>
     <div class="col-md-4">
