update and normalize data

--- a/_includes/js/carousel-js.html
+++ b/_includes/js/carousel-js.html
@@ -1,4 +1,4 @@
-{%- assign carousel-items = site.data.hjccc-images -%}
+{%- assign carousel-items = site.data.hjccc_images -%}
 <script> 
     var carouselItems = [ {% for c in carousel-items %}{ "object": "{{ c.object-id }}", "id": "{{ c.identifier }}" }{% unless forloop.last %}, {% endunless %}{% endfor %}];
     var carousel = document.getElementById("carouselInner");
