--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -19,7 +19,7 @@ layout: page
     <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-2">
     <div class="card" >
         <a href="{{ '/data/' | absolute_url | append: item.object-id | append: '.html' }}">
-            {% assign images = site.data.hjccc-images | where: "object-id", item.object-id | first %}
+            {% assign images = site.data.hjccc_images | where: "object-id", item.object-id | first %}
             <img class="card-img-top lazy" {% if forloop.index < 20 %}src{% else %}data-original{% endif %}="https://www.lib.uidaho.edu/digital/hjccc/objects/{{ images.identifier }}_th.jpg" alt="{{ item.title | escape }}">
         </a>
         <div class="card-body">
