--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -2,7 +2,7 @@
 layout: default
 gallery: true
 ---
-{%- assign fields = site.data.metadata-fields -%}
+{%- assign fields = site.data.metadata-config -%}
 {%- assign glossary = site.data.hjccc_glossary | map: "subject" -%}
 
 <div class="container py-3">
