--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,13 +2,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>{{ site.title }} | {{ page.title }}</title>
 <meta http-equiv="Content-Language" content="en-us" >
-{% if page.layout != "document" %}{% include page-meta.html %}{% endif %}
-{% if page.layout == "document" %}{% include item-meta.html %}{% endif %}
+{% if page.layout == "item" %}{% include item-meta.html %}{% else %}{% include page-meta.html %}{% endif %}
 
 <link href="https://fonts.googleapis.com/css?family=Oswald:300,400" rel="stylesheet">
-{% if site.bstheme %}<link rel="stylesheet" href="{{ 'assets/css/' | append: site.bstheme | append: '/bootstrap.min.css' | absolute_url }}" type="text/css">
-{% else %}<link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | absolute_url }}" type="text/css">{% endif %}
-{% if layout.gallery == true %}<link rel="stylesheet" href="{{ '/assets/lightgallery/css/lightgallery.min.css' | absolute_url }}" type="text/css">{% endif %}
+<link rel="stylesheet" href="{{ '/css/bootstrap.min.css' | prepend: site.digital-assets }}" type="text/css">
+{% if layout.gallery == true %}<link rel="stylesheet" href="{{ '/lightgallery/css/lightgallery.min.css' | prepend: site.digital-assets }}" type="text/css">{% endif %}
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" type="text/css">
 
 {% include google-analytics.html %}
+<!-- Last build date: {{ site.time | date: "%Y-%m-%d" }} -->
