--- a/_includes/js/gallery-js.html
+++ b/_includes/js/gallery-js.html
@@ -1,5 +1,5 @@
-<script src="{{ "/assets/js/jquery.mousewheel.min.js" | relative_url }}"></script>
-<script src="{{ "/assets/lightgallery/js/lightgallery-all.min.js" | relative_url }}"></script>
+<script src="{{ '/js/jquery.mousewheel.min.js' | prepend: site.digital-assets }}"></script>
+<script src="{{ '/lightgallery/js/lightgallery-all.min.js' | prepend: site.digital-assets }}"></script>
 <script>
     $(document).ready(function() {
         $("#lightgallery").lightGallery({
