--- a/_includes/js/table-js.html
+++ b/_includes/js/table-js.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" language="javascript" src="{{ "/assets/datatables/datatables.min.js" | relative_url }}"></script>
+<script type="text/javascript" language="javascript" src="{{ '/datatables/datatables.min.js' | prepend: site.digital-assets }}"></script>
 <script>
     $(document).ready(function() {
         $('#item-table').DataTable( {
